syntax = "proto3";

option go_package = "github.com/zerops-io/zcli/src/zeropsDaemonProtocol";

package zeropsDaemonProtocol;

service ZeropsDaemonProtocol {
    rpc startVpn (startVpnRequest) returns (startVpnResponse);
    rpc stopVpn (stopVpnRequest) returns (stopVpnResponse);
    rpc statusVpn (statusVpnRequest) returns (statusVpnResponse);
    rpc restartVpn (restartVpnRequest) returns (restartVpnResponse);
}

enum tunnelState {
    TUNNEL_INACTIVE = 0;
    TUNNEL_ACTIVE = 1;
}

enum dnsState {
    DNS_INACTIVE = 0;
    DNS_ACTIVE = 1;
}

message vpnStatus {
    tunnelState tunnelState = 1;
    dnsState dnsState = 2;
    string additionalInfo = 3;
}

message startVpnRequest {
    string apiAddress = 1;
    string vpnAddress = 2;
    string projectId = 3;
    string token = 4;
    uint32 mtu = 5;
    string userId = 6;
    bytes caCertificate = 7;
}

message startVpnResponse {
    vpnStatus vpnStatus = 1;
}

message stopVpnRequest {
}

message stopVpnResponse {
    vpnStatus vpnStatus = 1;
}

message statusVpnRequest {
}

message statusVpnResponse {
    vpnStatus vpnStatus = 1;
}

message restartVpnRequest {
    string token = 1;
}

message restartVpnResponse {
    vpnStatus vpnStatus = 1;
}

